--- a/src/styles/movies.css
+++ b/src/styles/movies.css
@@ -164,7 +164,6 @@
   align-items: center;
   gap: 15px;
   padding: 30px 0;
-  margin-top: 20px;
 }
 .pagination_container div {
   display: flex;
@@ -300,6 +299,11 @@
     padding: 15px 20px 30px;
   }
 
+  .pagination_container{
+    padding: 0;
+    padding-top: 20px;
+  }
+
   .movie_card {
     height: 270px;
     width: 170px;
@@ -339,7 +343,7 @@
 
   .pagination_container {
     gap: 10px;
-    padding: 20px 0;
+    padding: 0;
   }
 
   .pagination_container div {
